Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13965,7 +13965,8 @@
       "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 13.565340909090908\tLoss: 48.74\n",
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 12.215909090909092\tLoss: 43.879\n",
       "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 13.068181818181818\tLoss: 42.209\n",
-      "Coord: [-0.4 -0.9]\tAcc: 16\tLoss: 48.524\r"
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 15.767045454545455\tLoss: 45.815\n",
+      "Coord: [-0.1 -0.9]\tAcc: 21\tLoss: 57.771\r"
      ]
     }
    ],
