--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13888,7 +13888,11 @@
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 14.488636363636363\tLoss: 76.204\n",
       "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 12.144886363636363\tLoss: 111.661\n",
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 11.221590909090908\tLoss: 177.038\n",
-      "Coord: [ 1.  -0.9]\tAcc: 7\tLoss: 218.0214\r"
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.014204545454545\tLoss: 433.822\n",
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 10.369318181818182\tLoss: 187.616\n",
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 10.227272727272727\tLoss: 97.456\n",
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 10.227272727272727\tLoss: 70.431\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 14.204545454545455\tLoss: 40.436\n"
      ]
     }
    ],
