--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13966,7 +13966,9 @@
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 12.215909090909092\tLoss: 43.879\n",
       "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 13.068181818181818\tLoss: 42.209\n",
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 15.767045454545455\tLoss: 45.815\n",
-      "Coord: [-0.1 -0.9]\tAcc: 21\tLoss: 57.771\r"
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 13.28125\tLoss: 63.288\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 14.630681818181818\tLoss: 78.228\n",
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 13.210227272727273\tLoss: 83.603\n"
      ]
     }
    ],
