Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13989,7 +13989,13 @@
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 16.619318181818183\tLoss: 40.562\n",
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 27.485795454545453\tLoss: 29.141\n",
       "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 32.8125\tLoss: 26.012\n",
-      "Coord: [ 0.1 -0.8]\tAcc: 42\tLoss: 25.505\r"
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 27.05965909090909\tLoss: 33.513\n",
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 19.24715909090909\tLoss: 58.466\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 16.193181818181817\tLoss: 112.084\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 13.707386363636363\tLoss: 226.574\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 11.931818181818182\tLoss: 462.356\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 9.375\tLoss: 282.855\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 11.079545454545455\tLoss: 70.537\n"
      ]
     }
    ],
