--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13968,7 +13968,9 @@
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 15.767045454545455\tLoss: 45.815\n",
       "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 13.28125\tLoss: 63.288\n",
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 14.630681818181818\tLoss: 78.228\n",
-      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 13.210227272727273\tLoss: 83.603\n"
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 13.210227272727273\tLoss: 83.603\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 13.636363636363637\tLoss: 81.201\n",
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 14.133522727272727\tLoss: 76.628\n"
      ]
     }
    ],
