Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13892,7 +13892,11 @@
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 10.369318181818182\tLoss: 187.616\n",
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 10.227272727272727\tLoss: 97.456\n",
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 10.227272727272727\tLoss: 70.431\n",
-      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 14.204545454545455\tLoss: 40.436\n"
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 14.204545454545455\tLoss: 40.436\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 23.72159090909091\tLoss: 26.344\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 21.09375\tLoss: 32.599\n",
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 17.542613636363637\tLoss: 45.078\n",
+      "Coord: [ 0.6 -0.8]\tAcc: 12\tLoss: 59.697\r"
      ]
     }
    ],
