Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13995,7 +13995,9 @@
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 13.707386363636363\tLoss: 226.574\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 11.931818181818182\tLoss: 462.356\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 9.375\tLoss: 282.855\n",
-      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 11.079545454545455\tLoss: 70.537\n"
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 11.079545454545455\tLoss: 70.537\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 13.423295454545455\tLoss: 34.931\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 26.136363636363637\tLoss: 21.154\n"
      ]
     }
    ],
