Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13970,7 +13970,9 @@
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 14.630681818181818\tLoss: 78.228\n",
       "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 13.210227272727273\tLoss: 83.603\n",
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 13.636363636363637\tLoss: 81.201\n",
-      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 14.133522727272727\tLoss: 76.628\n"
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 14.133522727272727\tLoss: 76.628\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 14.488636363636363\tLoss: 74.709\n",
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.653409090909092\tLoss: 37.697\n"
      ]
     }
    ],
