--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13896,7 +13896,11 @@
       "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 23.72159090909091\tLoss: 26.344\n",
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 21.09375\tLoss: 32.599\n",
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 17.542613636363637\tLoss: 45.078\n",
-      "Coord: [ 0.6 -0.8]\tAcc: 12\tLoss: 59.697\r"
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 14.985795454545455\tLoss: 64.177\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 13.28125\tLoss: 101.157\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 12.002840909090908\tLoss: 173.97\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 10.085227272727273\tLoss: 233.211\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 10.227272727272727\tLoss: 111.109\n"
      ]
     }
    ],
