--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13972,7 +13972,10 @@
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 13.636363636363637\tLoss: 81.201\n",
       "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 14.133522727272727\tLoss: 76.628\n",
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 14.488636363636363\tLoss: 74.709\n",
-      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.653409090909092\tLoss: 37.697\n"
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.653409090909092\tLoss: 37.697\n",
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 14.701704545454545\tLoss: 36.985\n",
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 13.707386363636363\tLoss: 32.985\n",
+      "Coord: [-0.5 -0.8]\tAcc: 12\tLoss: 38.217\r"
      ]
     }
    ],
