Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13975,7 +13975,9 @@
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.653409090909092\tLoss: 37.697\n",
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 14.701704545454545\tLoss: 36.985\n",
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 13.707386363636363\tLoss: 32.985\n",
-      "Coord: [-0.5 -0.8]\tAcc: 12\tLoss: 38.217\r"
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 15.980113636363637\tLoss: 33.72\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 18.678977272727273\tLoss: 38.591\n",
+      "Coord: [-0.1 -0.8]\tAcc: 20\tLoss: 48.771\r"
      ]
     }
    ],
