--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13997,7 +13997,15 @@
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 9.375\tLoss: 282.855\n",
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 11.079545454545455\tLoss: 70.537\n",
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 13.423295454545455\tLoss: 34.931\n",
-      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 26.136363636363637\tLoss: 21.154\n"
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 26.136363636363637\tLoss: 21.154\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 39.13352272727273\tLoss: 16.218\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 38.70738636363637\tLoss: 17.683\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 27.201704545454547\tLoss: 30.631\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 18.110795454545453\tLoss: 60.951\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 15.411931818181818\tLoss: 123.457\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 13.920454545454545\tLoss: 258.78\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 10.014204545454545\tLoss: 372.042\n",
+      "Coord: [-0.9 -0.6]\tAcc: 12\tLoss: 178.505\r"
      ]
     }
    ],
