Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14005,7 +14005,8 @@
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 15.411931818181818\tLoss: 123.457\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 13.920454545454545\tLoss: 258.78\n",
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 10.014204545454545\tLoss: 372.042\n",
-      "Coord: [-0.9 -0.6]\tAcc: 12\tLoss: 178.505\r"
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 10.440340909090908\tLoss: 94.438\n",
+      "Coord: [-0.7 -0.6]\tAcc: 13\tLoss: 46.788\r"
      ]
     }
    ],
