--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13900,7 +13900,12 @@
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 13.28125\tLoss: 101.157\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 12.002840909090908\tLoss: 173.97\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 10.085227272727273\tLoss: 233.211\n",
-      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 10.227272727272727\tLoss: 111.109\n"
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 10.227272727272727\tLoss: 111.109\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 10.582386363636363\tLoss: 65.417\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 13.28125\tLoss: 40.194\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 23.650568181818183\tLoss: 21.583\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 30.113636363636363\tLoss: 18.032\n",
+      "Coord: [ 0.2 -0.7]\tAcc: 35\tLoss: 18.564\r"
      ]
     }
    ],
