Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13977,7 +13977,9 @@
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 13.707386363636363\tLoss: 32.985\n",
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 15.980113636363637\tLoss: 33.72\n",
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 18.678977272727273\tLoss: 38.591\n",
-      "Coord: [-0.1 -0.8]\tAcc: 20\tLoss: 48.771\r"
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 17.045454545454547\tLoss: 54.52\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 16.12215909090909\tLoss: 62.947\n",
+      "Coord: [ 0.3 -0.8]\tAcc: 21\tLoss: 64.213\r"
      ]
     }
    ],
