Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13905,7 +13905,11 @@
       "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 13.28125\tLoss: 40.194\n",
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 23.650568181818183\tLoss: 21.583\n",
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 30.113636363636363\tLoss: 18.032\n",
-      "Coord: [ 0.2 -0.7]\tAcc: 35\tLoss: 18.564\r"
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 24.076704545454547\tLoss: 25.483\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 18.323863636363637\tLoss: 36.858\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 16.12215909090909\tLoss: 58.589\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 14.417613636363637\tLoss: 94.945\n",
+      "Coord: [ 1.  -0.7]\tAcc: 12\tLoss: 129.816\r"
      ]
     }
    ],
