--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13979,7 +13979,9 @@
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 18.678977272727273\tLoss: 38.591\n",
       "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 17.045454545454547\tLoss: 54.52\n",
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 16.12215909090909\tLoss: 62.947\n",
-      "Coord: [ 0.3 -0.8]\tAcc: 21\tLoss: 64.213\r"
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 15.340909090909092\tLoss: 64.107\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 14.985795454545455\tLoss: 61.509\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 14.84375\tLoss: 61.73\n"
      ]
     }
    ],
