Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13981,7 +13981,9 @@
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 16.12215909090909\tLoss: 62.947\n",
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 15.340909090909092\tLoss: 64.107\n",
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 14.985795454545455\tLoss: 61.509\n",
-      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 14.84375\tLoss: 61.73\n"
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 14.84375\tLoss: 61.73\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 13.494318181818182\tLoss: 62.745\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 12.144886363636363\tLoss: 30.223\n"
      ]
     }
    ],
