Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13909,7 +13909,11 @@
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 18.323863636363637\tLoss: 36.858\n",
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 16.12215909090909\tLoss: 58.589\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 14.417613636363637\tLoss: 94.945\n",
-      "Coord: [ 1.  -0.7]\tAcc: 12\tLoss: 129.816\r"
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 9.943181818181818\tLoss: 299.868\n",
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 9.872159090909092\tLoss: 135.269\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 10.085227272727273\tLoss: 69.493\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 12.144886363636363\tLoss: 38.927\n",
+      "Coord: [-0.3 -0.6]\tAcc: 18\tLoss: 29.661\r"
      ]
     }
    ],
