--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14006,7 +14006,15 @@
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 13.920454545454545\tLoss: 258.78\n",
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 10.014204545454545\tLoss: 372.042\n",
       "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 10.440340909090908\tLoss: 94.438\n",
-      "Coord: [-0.7 -0.6]\tAcc: 13\tLoss: 46.788\r"
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 12.855113636363637\tLoss: 32.301\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 19.957386363636363\tLoss: 17.919\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 41.26420454545455\tLoss: 10.991\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 49.92897727272727\tLoss: 9.496\n",
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 40.90909090909091\tLoss: 15.423\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 25.28409090909091\tLoss: 32.652\n",
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 19.602272727272727\tLoss: 66.064\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 16.051136363636363\tLoss: 143.181\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 14.0625\tLoss: 299.986\n"
      ]
     }
    ],
