--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13983,7 +13983,9 @@
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 14.985795454545455\tLoss: 61.509\n",
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 14.84375\tLoss: 61.73\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 13.494318181818182\tLoss: 62.745\n",
-      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 12.144886363636363\tLoss: 30.223\n"
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 12.144886363636363\tLoss: 30.223\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 13.849431818181818\tLoss: 27.812\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 16.619318181818183\tLoss: 24.919\n"
      ]
     }
    ],
