Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13955,7 +13955,8 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-05-05T04:24:26.165Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -14014,7 +14015,10 @@
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 25.28409090909091\tLoss: 32.652\n",
       "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 19.602272727272727\tLoss: 66.064\n",
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 16.051136363636363\tLoss: 143.181\n",
-      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 14.0625\tLoss: 299.986\n"
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 14.0625\tLoss: 299.986\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 11.647727272727273\tLoss: 138.807\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 11.079545454545455\tLoss: 41.363\n",
+      "Coord: [-0.6 -0.5]\tAcc: 19\tLoss: 25.089\r"
      ]
     }
    ],
