Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13860,7 +13860,8 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-05-05T04:25:36.010Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -13913,7 +13914,11 @@
       "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 9.872159090909092\tLoss: 135.269\n",
       "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 10.085227272727273\tLoss: 69.493\n",
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 12.144886363636363\tLoss: 38.927\n",
-      "Coord: [-0.3 -0.6]\tAcc: 18\tLoss: 29.661\r"
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 23.93465909090909\tLoss: 19.992\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 39.34659090909091\tLoss: 11.988\n",
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 34.87215909090909\tLoss: 13.116\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 26.491477272727273\tLoss: 20.162\n",
+      "Coord: [ 0.6 -0.6]\tAcc: 35\tLoss: 31.776\r"
      ]
     }
    ],
