--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13816,7 +13816,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== 3. Weight - Orthogonal - whole norm ===="
    ]
@@ -13831,7 +13833,8 @@
     },
     "code_folding": [
      0
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [
     {
@@ -13918,7 +13921,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T04:26:11.959572Z",
      "start_time": "2019-05-05T04:26:06.895632Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -13944,7 +13948,9 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-05-05T04:26:11.571Z"
-    }
+    },
+    "hidden": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -13985,7 +13991,10 @@
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 13.494318181818182\tLoss: 62.745\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 12.144886363636363\tLoss: 30.223\n",
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 13.849431818181818\tLoss: 27.812\n",
-      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 16.619318181818183\tLoss: 24.919\n"
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 16.619318181818183\tLoss: 24.919\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 23.224431818181817\tLoss: 24.19\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 21.803977272727273\tLoss: 31.812\n",
+      "Coord: [ 0.  -0.7]\tAcc: 28\tLoss: 39.725\r"
      ]
     }
    ],
@@ -14035,7 +14044,8 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-05-05T04:26:17.166Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
