Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13994,7 +13994,9 @@
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 16.619318181818183\tLoss: 24.919\n",
       "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 23.224431818181817\tLoss: 24.19\n",
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 21.803977272727273\tLoss: 31.812\n",
-      "Coord: [ 0.  -0.7]\tAcc: 28\tLoss: 39.725\r"
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 21.022727272727273\tLoss: 42.713\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 18.536931818181817\tLoss: 46.842\n",
+      "Coord: [ 0.4 -0.7]\tAcc: 25\tLoss: 47.402\r"
      ]
     }
    ],
