Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13735,7 +13735,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== 3. Weight - Orthogonal - whole norm ===="
    ]
@@ -13747,7 +13749,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T04:25:08.289326Z",
      "start_time": "2019-05-05T04:25:04.079465Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -13834,7 +13837,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T04:25:24.341578Z",
      "start_time": "2019-05-05T04:25:19.834658Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -13861,6 +13865,7 @@
     "ExecuteTime": {
      "start_time": "2019-05-05T04:25:36.010Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -13918,7 +13923,11 @@
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 39.34659090909091\tLoss: 11.988\n",
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 34.87215909090909\tLoss: 13.116\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 26.491477272727273\tLoss: 20.162\n",
-      "Coord: [ 0.6 -0.6]\tAcc: 35\tLoss: 31.776\r"
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 20.738636363636363\tLoss: 33.684\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 16.832386363636363\tLoss: 56.22\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 14.559659090909092\tLoss: 105.802\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 9.943181818181818\tLoss: 162.188\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 9.872159090909092\tLoss: 82.128\n"
      ]
     }
    ],
@@ -13968,7 +13977,8 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-05-05T04:25:41.790Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
