Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13927,7 +13927,8 @@
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 16.832386363636363\tLoss: 56.22\n",
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 14.559659090909092\tLoss: 105.802\n",
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 9.943181818181818\tLoss: 162.188\n",
-      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 9.872159090909092\tLoss: 82.128\n"
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 9.872159090909092\tLoss: 82.128\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 10.724431818181818\tLoss: 43.801\n"
      ]
     }
    ],
