--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13996,7 +13996,9 @@
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 21.803977272727273\tLoss: 31.812\n",
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 21.022727272727273\tLoss: 42.713\n",
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 18.536931818181817\tLoss: 46.842\n",
-      "Coord: [ 0.4 -0.7]\tAcc: 25\tLoss: 47.402\r"
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 16.761363636363637\tLoss: 47.454\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 15.056818181818182\tLoss: 48.157\n",
+      "Coord: [ 0.8 -0.7]\tAcc: 21\tLoss: 46.327\r"
      ]
     }
    ],
