--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13928,7 +13928,10 @@
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 14.559659090909092\tLoss: 105.802\n",
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 9.943181818181818\tLoss: 162.188\n",
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 9.872159090909092\tLoss: 82.128\n",
-      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 10.724431818181818\tLoss: 43.801\n"
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 10.724431818181818\tLoss: 43.801\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 20.525568181818183\tLoss: 19.264\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 43.25284090909091\tLoss: 9.12\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 50.92329545454545\tLoss: 6.73\n"
      ]
     }
    ],
