--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13993,7 +13993,9 @@
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 18.536931818181817\tLoss: 46.842\n",
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 16.761363636363637\tLoss: 47.454\n",
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 15.056818181818182\tLoss: 48.157\n",
-      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 14.630681818181818\tLoss: 49.887\n"
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 14.630681818181818\tLoss: 49.887\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 10.795454545454545\tLoss: 26.698\n",
+      "Coord: [-0.8 -0.6]\tAcc: 12\tLoss: 28.407\r"
      ]
     }
    ],
