--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13995,7 +13995,9 @@
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 15.056818181818182\tLoss: 48.157\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 14.630681818181818\tLoss: 49.887\n",
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 10.795454545454545\tLoss: 26.698\n",
-      "Coord: [-0.8 -0.6]\tAcc: 12\tLoss: 28.407\r"
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 12.357954545454545\tLoss: 25.829\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 15.411931818181818\tLoss: 21.002\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 24.005681818181817\tLoss: 17.495\n"
      ]
     }
    ],
