--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13931,7 +13931,12 @@
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 10.724431818181818\tLoss: 43.801\n",
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 20.525568181818183\tLoss: 19.264\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 43.25284090909091\tLoss: 9.12\n",
-      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 50.92329545454545\tLoss: 6.73\n"
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 50.92329545454545\tLoss: 6.73\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 38.49431818181818\tLoss: 9.968\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 27.272727272727273\tLoss: 18.784\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 20.02840909090909\tLoss: 33.791\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 15.625\tLoss: 64.339\n",
+      "Coord: [ 1.  -0.5]\tAcc: 11\tLoss: 94.833\r"
      ]
     }
    ],
