Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13997,7 +13997,9 @@
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 10.795454545454545\tLoss: 26.698\n",
       "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 12.357954545454545\tLoss: 25.829\n",
       "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 15.411931818181818\tLoss: 21.002\n",
-      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 24.005681818181817\tLoss: 17.495\n"
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 24.005681818181817\tLoss: 17.495\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 31.960227272727273\tLoss: 16.274\n",
+      "Coord: [-0.1 -0.6]\tAcc: 38\tLoss: 20.751\r"
      ]
     }
    ],
