--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7462,7 +7462,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== 2. Random - Orthogonal - whole norm ===="
    ]
@@ -7475,7 +7477,8 @@
      "end_time": "2019-05-05T02:21:25.831526Z",
      "start_time": "2019-05-05T02:21:21.991890Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -7549,6 +7552,7 @@
      "end_time": "2019-05-05T02:21:54.849165Z",
      "start_time": "2019-05-05T02:21:48.712405Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -7577,7 +7581,8 @@
      "end_time": "2019-05-05T03:35:56.862084Z",
      "start_time": "2019-05-05T02:22:26.817538Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -7861,7 +7866,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T03:36:10.056601Z",
      "start_time": "2019-05-05T03:36:08.452869Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -14029,7 +14035,15 @@
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 55.82386363636363\tLoss: 6.951\n",
       "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 37.64204545454545\tLoss: 16.318\n",
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 23.792613636363637\tLoss: 35.522\n",
-      "Coord: [ 0.6 -0.5]\tAcc: 29\tLoss: 42.894\r"
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 19.389204545454547\tLoss: 76.51\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 15.056818181818182\tLoss: 167.058\n",
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 11.079545454545455\tLoss: 186.916\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 10.795454545454545\tLoss: 61.926\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 14.133522727272727\tLoss: 21.137\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 26.704545454545453\tLoss: 9.998\n",
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 60.86647727272727\tLoss: 3.94\n",
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 72.01704545454545\tLoss: 2.839\n",
+      "Coord: [ 0.1 -0.4]\tAcc: 93\tLoss: 3.581\r"
      ]
     }
    ],
