Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -13999,7 +13999,7 @@
       "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 15.411931818181818\tLoss: 21.002\n",
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 24.005681818181817\tLoss: 17.495\n",
       "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 31.960227272727273\tLoss: 16.274\n",
-      "Coord: [-0.1 -0.6]\tAcc: 38\tLoss: 20.751\r"
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 29.829545454545453\tLoss: 24.53\n"
      ]
     }
    ],
