Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13735,9 +13735,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# ==== 3. Weight - Orthogonal - whole norm ===="
    ]
@@ -13749,8 +13747,7 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T04:25:08.289326Z",
      "start_time": "2019-05-05T04:25:04.079465Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -13837,8 +13834,7 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T04:25:24.341578Z",
      "start_time": "2019-05-05T04:25:19.834658Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -13865,7 +13861,6 @@
     "ExecuteTime": {
      "start_time": "2019-05-05T04:25:36.010Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -13936,7 +13931,11 @@
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 27.272727272727273\tLoss: 18.784\n",
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 20.02840909090909\tLoss: 33.791\n",
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 15.625\tLoss: 64.339\n",
-      "Coord: [ 1.  -0.5]\tAcc: 11\tLoss: 94.833\r"
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 9.659090909090908\tLoss: 209.095\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 9.801136363636363\tLoss: 94.126\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 10.085227272727273\tLoss: 51.654\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 15.198863636363637\tLoss: 22.032\n",
+      "Coord: [-0.3 -0.4]\tAcc: 30\tLoss: 14.383\r"
      ]
     }
    ],
@@ -13986,8 +13985,7 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-05-05T04:25:41.790Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
