Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14002,7 +14002,9 @@
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 29.829545454545453\tLoss: 24.53\n",
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 24.71590909090909\tLoss: 30.849\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 21.235795454545453\tLoss: 34.27\n",
-      "Coord: [ 0.5 -0.6]\tAcc: 30\tLoss: 33.295\r"
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 17.329545454545453\tLoss: 35.869\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 15.980113636363637\tLoss: 37.824\n",
+      "Coord: [ 0.9 -0.6]\tAcc: 20\tLoss: 35.964\r"
      ]
     }
    ],
