Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13935,7 +13935,11 @@
       "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 9.801136363636363\tLoss: 94.126\n",
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 10.085227272727273\tLoss: 51.654\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 15.198863636363637\tLoss: 22.032\n",
-      "Coord: [-0.3 -0.4]\tAcc: 30\tLoss: 14.383\r"
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 43.32386363636363\tLoss: 7.435\n",
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 64.63068181818181\tLoss: 3.935\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 60.51136363636363\tLoss: 4.05\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 39.41761363636363\tLoss: 9.391\n",
+      "Coord: [ 0.5 -0.4]\tAcc: 41\tLoss: 12.073\r"
      ]
     }
    ],
