--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14043,7 +14043,15 @@
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 26.704545454545453\tLoss: 9.998\n",
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 60.86647727272727\tLoss: 3.94\n",
       "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 72.01704545454545\tLoss: 2.839\n",
-      "Coord: [ 0.1 -0.4]\tAcc: 93\tLoss: 3.581\r"
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 57.31534090909091\tLoss: 6.648\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 32.67045454545455\tLoss: 17.998\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 23.082386363636363\tLoss: 41.508\n",
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 17.68465909090909\tLoss: 91.357\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 14.630681818181818\tLoss: 197.29\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 10.085227272727273\tLoss: 71.476\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 14.204545454545455\tLoss: 26.616\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 16.832386363636363\tLoss: 12.08\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 51.91761363636363\tLoss: 4.369\n"
      ]
     }
    ],
