--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14004,7 +14004,9 @@
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 21.235795454545453\tLoss: 34.27\n",
       "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 17.329545454545453\tLoss: 35.869\n",
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 15.980113636363637\tLoss: 37.824\n",
-      "Coord: [ 0.9 -0.6]\tAcc: 20\tLoss: 35.964\r"
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 15.696022727272727\tLoss: 40.782\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 10.085227272727273\tLoss: 24.329\n",
+      "Coord: [-0.8 -0.5]\tAcc: 13\tLoss: 25.423\r"
      ]
     }
    ],
