Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14006,7 +14006,9 @@
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 15.980113636363637\tLoss: 37.824\n",
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 15.696022727272727\tLoss: 40.782\n",
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 10.085227272727273\tLoss: 24.329\n",
-      "Coord: [-0.8 -0.5]\tAcc: 13\tLoss: 25.423\r"
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 10.511363636363637\tLoss: 21.407\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 19.460227272727273\tLoss: 16.155\n",
+      "Coord: [-0.4 -0.5]\tAcc: 26\tLoss: 14.957\r"
      ]
     }
    ],
