--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14008,7 +14008,9 @@
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 10.085227272727273\tLoss: 24.329\n",
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 10.511363636363637\tLoss: 21.407\n",
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 19.460227272727273\tLoss: 16.155\n",
-      "Coord: [-0.4 -0.5]\tAcc: 26\tLoss: 14.957\r"
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 38.21022727272727\tLoss: 10.946\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 43.46590909090909\tLoss: 10.72\n",
+      "Coord: [ 0.  -0.5]\tAcc: 50\tLoss: 14.117\r"
      ]
     }
    ],
