--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13943,7 +13943,11 @@
       "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 17.613636363636363\tLoss: 43.52\n",
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 13.778409090909092\tLoss: 87.885\n",
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 9.588068181818182\tLoss: 114.005\n",
-      "Coord: [-0.8 -0.3]\tAcc: 11\tLoss: 82.612\r"
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 10.014204545454545\tLoss: 59.795\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 11.079545454545455\tLoss: 29.953\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 35.15625\tLoss: 8.385\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 72.23011363636364\tLoss: 2.251\n",
+      "Coord: [ 0.  -0.3]\tAcc: 99\tLoss: 1.5276\r"
      ]
     }
    ],
