--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14051,7 +14051,15 @@
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 10.085227272727273\tLoss: 71.476\n",
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 14.204545454545455\tLoss: 26.616\n",
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 16.832386363636363\tLoss: 12.08\n",
-      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 51.91761363636363\tLoss: 4.369\n"
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 51.91761363636363\tLoss: 4.369\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 80.32670454545455\tLoss: 1.473\n",
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 79.4034090909091\tLoss: 2.015\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 50.99431818181818\tLoss: 7.517\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 28.693181818181817\tLoss: 21.756\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 20.099431818181817\tLoss: 49.208\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 16.90340909090909\tLoss: 110.683\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 9.872159090909092\tLoss: 86.31\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 11.860795454545455\tLoss: 34.907\n"
      ]
     }
    ],
