Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14010,7 +14010,9 @@
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 19.460227272727273\tLoss: 16.155\n",
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 38.21022727272727\tLoss: 10.946\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 43.46590909090909\tLoss: 10.72\n",
-      "Coord: [ 0.  -0.5]\tAcc: 50\tLoss: 14.117\r"
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 37.85511363636363\tLoss: 16.689\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 28.62215909090909\tLoss: 22.182\n",
+      "Coord: [ 0.4 -0.5]\tAcc: 35\tLoss: 22.252\r"
      ]
     }
    ],
