Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13947,7 +13947,11 @@
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 11.079545454545455\tLoss: 29.953\n",
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 35.15625\tLoss: 8.385\n",
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 72.23011363636364\tLoss: 2.251\n",
-      "Coord: [ 0.  -0.3]\tAcc: 99\tLoss: 1.5276\r"
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 80.7528409090909\tLoss: 1.325\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 58.73579545454545\tLoss: 3.883\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 35.15625\tLoss: 11.437\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 21.022727272727273\tLoss: 29.688\n",
+      "Coord: [ 0.9 -0.3]\tAcc: 22\tLoss: 59.291\r"
      ]
     }
    ],
