--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14012,7 +14012,9 @@
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 43.46590909090909\tLoss: 10.72\n",
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 37.85511363636363\tLoss: 16.689\n",
       "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 28.62215909090909\tLoss: 22.182\n",
-      "Coord: [ 0.4 -0.5]\tAcc: 35\tLoss: 22.252\r"
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 20.80965909090909\tLoss: 26.355\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 17.96875\tLoss: 28.663\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 15.909090909090908\tLoss: 31.006\n"
      ]
     }
    ],
