--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14014,7 +14014,9 @@
       "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 28.62215909090909\tLoss: 22.182\n",
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 20.80965909090909\tLoss: 26.355\n",
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 17.96875\tLoss: 28.663\n",
-      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 15.909090909090908\tLoss: 31.006\n"
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 15.909090909090908\tLoss: 31.006\n",
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 9.090909090909092\tLoss: 19.632\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 10.369318181818182\tLoss: 23.462\n"
      ]
     }
    ],
