Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13951,7 +13951,11 @@
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 58.73579545454545\tLoss: 3.883\n",
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 35.15625\tLoss: 11.437\n",
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 21.022727272727273\tLoss: 29.688\n",
-      "Coord: [ 0.9 -0.3]\tAcc: 22\tLoss: 59.291\r"
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 14.0625\tLoss: 58.705\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 9.303977272727273\tLoss: 157.889\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 9.801136363636363\tLoss: 72.729\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 9.943181818181818\tLoss: 39.12\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 20.383522727272727\tLoss: 13.171\n"
      ]
     }
    ],
