Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14059,7 +14059,15 @@
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 20.099431818181817\tLoss: 49.208\n",
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 16.90340909090909\tLoss: 110.683\n",
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 9.872159090909092\tLoss: 86.31\n",
-      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 11.860795454545455\tLoss: 34.907\n"
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 11.860795454545455\tLoss: 34.907\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 16.619318181818183\tLoss: 13.964\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 34.23295454545455\tLoss: 6.136\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 77.27272727272727\tLoss: 1.497\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 92.75568181818181\tLoss: 0.37\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 73.7215909090909\tLoss: 2.304\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 42.75568181818182\tLoss: 9.727\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 25.568181818181817\tLoss: 25.803\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 19.53125\tLoss: 58.847\n"
      ]
     }
    ],
