--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14016,7 +14016,9 @@
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 17.96875\tLoss: 28.663\n",
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 15.909090909090908\tLoss: 31.006\n",
       "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 9.090909090909092\tLoss: 19.632\n",
-      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 10.369318181818182\tLoss: 23.462\n"
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 10.369318181818182\tLoss: 23.462\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 13.707386363636363\tLoss: 17.5\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 32.74147727272727\tLoss: 10.44\n"
      ]
     }
    ],
