Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13955,7 +13955,11 @@
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 9.303977272727273\tLoss: 157.889\n",
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 9.801136363636363\tLoss: 72.729\n",
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 9.943181818181818\tLoss: 39.12\n",
-      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 20.383522727272727\tLoss: 13.171\n"
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 20.383522727272727\tLoss: 13.171\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 70.66761363636364\tLoss: 2.184\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 93.2528409090909\tLoss: 0.348\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 81.5340909090909\tLoss: 1.029\n",
+      "Coord: [ 0.3 -0.2]\tAcc: 83\tLoss: 2.551\r"
      ]
     }
    ],
