--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14018,7 +14018,9 @@
       "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 9.090909090909092\tLoss: 19.632\n",
       "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 10.369318181818182\tLoss: 23.462\n",
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 13.707386363636363\tLoss: 17.5\n",
-      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 32.74147727272727\tLoss: 10.44\n"
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 32.74147727272727\tLoss: 10.44\n",
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 60.65340909090909\tLoss: 4.961\n",
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 56.32102272727273\tLoss: 6.268\n"
      ]
     }
    ],
