Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14020,7 +14020,9 @@
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 13.707386363636363\tLoss: 17.5\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 32.74147727272727\tLoss: 10.44\n",
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 60.65340909090909\tLoss: 4.961\n",
-      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 56.32102272727273\tLoss: 6.268\n"
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 56.32102272727273\tLoss: 6.268\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 42.04545454545455\tLoss: 11.722\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 28.835227272727273\tLoss: 17.942\n"
      ]
     }
    ],
