Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13959,7 +13959,11 @@
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 70.66761363636364\tLoss: 2.184\n",
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 93.2528409090909\tLoss: 0.348\n",
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 81.5340909090909\tLoss: 1.029\n",
-      "Coord: [ 0.3 -0.2]\tAcc: 83\tLoss: 2.551\r"
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 48.93465909090909\tLoss: 5.847\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 27.414772727272727\tLoss: 19.307\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 18.323863636363637\tLoss: 42.591\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 13.068181818181818\tLoss: 83.529\n",
+      "Coord: [-1.  -0.1]\tAcc: 9\tLoss: 144.1143\r"
      ]
     }
    ],
