Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14022,7 +14022,9 @@
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 60.65340909090909\tLoss: 4.961\n",
       "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 56.32102272727273\tLoss: 6.268\n",
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 42.04545454545455\tLoss: 11.722\n",
-      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 28.835227272727273\tLoss: 17.942\n"
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 28.835227272727273\tLoss: 17.942\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 22.37215909090909\tLoss: 22.079\n",
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 18.25284090909091\tLoss: 24.458\n"
      ]
     }
    ],
