--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14067,7 +14067,15 @@
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 73.7215909090909\tLoss: 2.304\n",
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 42.75568181818182\tLoss: 9.727\n",
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 25.568181818181817\tLoss: 25.803\n",
-      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 19.53125\tLoss: 58.847\n"
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 19.53125\tLoss: 58.847\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 15.909090909090908\tLoss: 132.886\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 10.653409090909092\tLoss: 46.852\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 13.920454545454545\tLoss: 18.733\n",
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 22.869318181818183\tLoss: 8.052\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 60.44034090909091\tLoss: 2.72\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 94.10511363636364\tLoss: 0.25\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 94.17613636363636\tLoss: 0.327\n",
+      "Coord: [ 0.2 -0.1]\tAcc: 101\tLoss: 1.384\r"
      ]
     }
    ],
