Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14024,7 +14024,9 @@
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 42.04545454545455\tLoss: 11.722\n",
       "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 28.835227272727273\tLoss: 17.942\n",
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 22.37215909090909\tLoss: 22.079\n",
-      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 18.25284090909091\tLoss: 24.458\n"
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 18.25284090909091\tLoss: 24.458\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 15.909090909090908\tLoss: 26.053\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 9.872159090909092\tLoss: 18.044\n"
      ]
     }
    ],
