--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13963,7 +13963,11 @@
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 27.414772727272727\tLoss: 19.307\n",
       "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 18.323863636363637\tLoss: 42.591\n",
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 13.068181818181818\tLoss: 83.529\n",
-      "Coord: [-1.  -0.1]\tAcc: 9\tLoss: 144.1143\r"
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 9.517045454545455\tLoss: 93.153\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 9.730113636363637\tLoss: 51.088\n",
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 11.647727272727273\tLoss: 22.451\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 54.61647727272727\tLoss: 4.002\n",
+      "Coord: [-0.2 -0.1]\tAcc: 97\tLoss: 1.2753\r"
      ]
     }
    ],
