--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14026,7 +14026,10 @@
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 22.37215909090909\tLoss: 22.079\n",
       "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 18.25284090909091\tLoss: 24.458\n",
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 15.909090909090908\tLoss: 26.053\n",
-      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 9.872159090909092\tLoss: 18.044\n"
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 9.872159090909092\tLoss: 18.044\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 11.221590909090908\tLoss: 20.768\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 19.602272727272727\tLoss: 13.257\n",
+      "Coord: [-0.4 -0.3]\tAcc: 55\tLoss: 8.245\r"
      ]
     }
    ],
