Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13967,7 +13967,11 @@
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 9.730113636363637\tLoss: 51.088\n",
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 11.647727272727273\tLoss: 22.451\n",
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 54.61647727272727\tLoss: 4.002\n",
-      "Coord: [-0.2 -0.1]\tAcc: 97\tLoss: 1.2753\r"
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 94.2471590909091\tLoss: 0.276\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 96.5909090909091\tLoss: 0.135\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 71.09375\tLoss: 2.081\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 36.64772727272727\tLoss: 12.188\n",
+      "Coord: [ 0.6 -0.1]\tAcc: 38\tLoss: 18.787\r"
      ]
     }
    ],
