Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14075,7 +14075,15 @@
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 60.44034090909091\tLoss: 2.72\n",
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 94.10511363636364\tLoss: 0.25\n",
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 94.17613636363636\tLoss: 0.327\n",
-      "Coord: [ 0.2 -0.1]\tAcc: 101\tLoss: 1.384\r"
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 63.92045454545455\tLoss: 3.671\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 33.73579545454545\tLoss: 12.915\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 22.727272727272727\tLoss: 31.4\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 19.389204545454547\tLoss: 72.619\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 10.511363636363637\tLoss: 61.776\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 11.647727272727273\tLoss: 26.666\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 17.96875\tLoss: 10.45\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 37.42897727272727\tLoss: 4.84\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 82.3153409090909\tLoss: 0.978\n"
      ]
     }
    ],
