Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14029,7 +14029,9 @@
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 9.872159090909092\tLoss: 18.044\n",
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 11.221590909090908\tLoss: 20.768\n",
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 19.602272727272727\tLoss: 13.257\n",
-      "Coord: [-0.4 -0.3]\tAcc: 55\tLoss: 8.245\r"
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 54.82954545454545\tLoss: 4.982\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 77.76988636363636\tLoss: 1.794\n",
+      "Coord: [ 0.  -0.3]\tAcc: 105\tLoss: 1.703\r"
      ]
     }
    ],
