Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13971,7 +13971,11 @@
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 96.5909090909091\tLoss: 0.135\n",
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 71.09375\tLoss: 2.081\n",
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 36.64772727272727\tLoss: 12.188\n",
-      "Coord: [ 0.6 -0.1]\tAcc: 38\tLoss: 18.787\r"
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 21.661931818181817\tLoss: 29.495\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 15.696022727272727\tLoss: 59.168\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 8.59375\tLoss: 136.53\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 9.588068181818182\tLoss: 67.396\n",
+      "Coord: [-0.7  0. ]\tAcc: 11\tLoss: 49.332\r"
      ]
     }
    ],
