--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14031,7 +14031,9 @@
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 19.602272727272727\tLoss: 13.257\n",
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 54.82954545454545\tLoss: 4.982\n",
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 77.76988636363636\tLoss: 1.794\n",
-      "Coord: [ 0.  -0.3]\tAcc: 105\tLoss: 1.703\r"
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 66.40625\tLoss: 3.887\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 44.10511363636363\tLoss: 10.193\n",
+      "Coord: [ 0.4 -0.3]\tAcc: 49\tLoss: 10.614\r"
      ]
     }
    ],
