Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14033,7 +14033,9 @@
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 77.76988636363636\tLoss: 1.794\n",
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 66.40625\tLoss: 3.887\n",
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 44.10511363636363\tLoss: 10.193\n",
-      "Coord: [ 0.4 -0.3]\tAcc: 49\tLoss: 10.614\r"
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 29.40340909090909\tLoss: 16.318\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 21.448863636363637\tLoss: 20.097\n",
+      "Coord: [ 0.8 -0.3]\tAcc: 35\tLoss: 16.976\r"
      ]
     }
    ],
