Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13975,7 +13975,11 @@
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 15.696022727272727\tLoss: 59.168\n",
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 8.59375\tLoss: 136.53\n",
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 9.588068181818182\tLoss: 67.396\n",
-      "Coord: [-0.7  0. ]\tAcc: 11\tLoss: 49.332\r"
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 9.730113636363637\tLoss: 35.517\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 29.545454545454547\tLoss: 9.019\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 83.80681818181819\tLoss: 0.88\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 99.21875\tLoss: 0.027\n",
+      "Coord: [0.1 0. ]\tAcc: 127\tLoss: 0.026\r"
      ]
     }
    ],
