Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14083,7 +14083,15 @@
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 11.647727272727273\tLoss: 26.666\n",
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 17.96875\tLoss: 10.45\n",
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 37.42897727272727\tLoss: 4.84\n",
-      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 82.3153409090909\tLoss: 0.978\n"
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 82.3153409090909\tLoss: 0.978\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 99.28977272727273\tLoss: 0.028\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 84.44602272727273\tLoss: 1.006\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 49.64488636363637\tLoss: 6.209\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 28.196022727272727\tLoss: 17.424\n",
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 21.37784090909091\tLoss: 41.331\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 18.394886363636363\tLoss: 92.176\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 11.221590909090908\tLoss: 36.13\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 13.707386363636363\tLoss: 15.712\n"
      ]
     }
    ],
