--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14035,7 +14035,9 @@
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 44.10511363636363\tLoss: 10.193\n",
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 29.40340909090909\tLoss: 16.318\n",
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 21.448863636363637\tLoss: 20.097\n",
-      "Coord: [ 0.8 -0.3]\tAcc: 35\tLoss: 16.976\r"
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 17.755681818181817\tLoss: 21.22\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 10.298295454545455\tLoss: 12.202\n",
+      "Coord: [-0.8 -0.2]\tAcc: 14\tLoss: 16.864\r"
      ]
     }
    ],
