Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13979,7 +13979,11 @@
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 29.545454545454547\tLoss: 9.019\n",
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 83.80681818181819\tLoss: 0.88\n",
       "count: 220\tCoord: [0. 0.]\t\tAcc: 99.21875\tLoss: 0.027\n",
-      "Coord: [0.1 0. ]\tAcc: 127\tLoss: 0.026\r"
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 88.7784090909091\tLoss: 0.582\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 50.28409090909091\tLoss: 6.817\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 28.480113636363637\tLoss: 20.634\n",
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 16.832386363636363\tLoss: 42.4\n",
+      "Coord: [1. 0.]\tAcc: 19\tLoss: 86.33684\r"
      ]
     }
    ],
