--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14037,7 +14037,9 @@
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 21.448863636363637\tLoss: 20.097\n",
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 17.755681818181817\tLoss: 21.22\n",
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 10.298295454545455\tLoss: 12.202\n",
-      "Coord: [-0.8 -0.2]\tAcc: 14\tLoss: 16.864\r"
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 10.511363636363637\tLoss: 16.962\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 12.855113636363637\tLoss: 16.354\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 36.15056818181818\tLoss: 7.632\n"
      ]
     }
    ],
